refactor(components): replace outline with border for consistent styling

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -26,7 +26,7 @@ const {
 
 <Link
   href={href || `/`}
-  class={`group relative flex flex-nowrap items-center rounded-lg outline-theme-500 hover:outline-theme-accent/75 hover:text-theme-100 px-4 py-4 pr-10 shadow-md transition-all duration-200 bg-theme-800 hover:bg-theme-700 text-theme-200 outline hover:shadow-lg ${className}`}
+  class={`group relative flex flex-nowrap items-center rounded-lg border-theme-500 hover:border-theme-accent/75 hover:text-theme-100 px-4 py-4 pr-10 shadow-md transition-all duration-200 bg-theme-800 hover:bg-theme-700 text-theme-200 border hover:shadow-lg ${className}`}
   underline={false}
   externalInNewTab={externalInNewTab}>
   <!-- Icon -->
