--- a/src/components/GitHubCommits.astro
+++ b/src/components/GitHubCommits.astro
@@ -83,7 +83,7 @@ const commits = await getLatestCommits('fractalcounty')
         <li>
           <Link
             href={commit.html_url}
-            class='group flex flex-col items-start gap-1 rounded-lg bg-theme-800 p-3 shadow-md outline outline-theme-500 transition-all duration-200 hover:bg-theme-700 hover:shadow-lg hover:outline-theme-accent/75'
+            class='group flex flex-col items-start gap-1 rounded-lg border border-theme-500 bg-theme-800 p-3 shadow-md transition-all duration-200 hover:border-theme-accent/75 hover:bg-theme-700 hover:shadow-lg'
             externalInNewTab={true}
             underline={false}>
             <div class='flex items-center gap-2 text-sm text-theme-200 transition-all duration-200 hover:text-theme-100'>
