--- a/src/components/content/ContentDiscordConversation.astro
+++ b/src/components/content/ContentDiscordConversation.astro
@@ -18,7 +18,7 @@ const {
 <GgSansFont />
 
 <section
-  class='discord-conversation relative mx-auto my-8 bg-theme-800 shadow-lg outline outline-theme-500'
+  class='discord-conversation relative mx-auto my-8 border border-theme-500 bg-theme-800 shadow-lg'
   style='margin-top: 2rem; margin-bottom: 2rem;'
   aria-label={`Discord conversation: ${title}`}>
   <h3 id='conversation-title' class='sr-only'>{title}</h3>
