feat(ui): implement heading anchor link copying with toast notifications

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Link from '@/components/Link.astro'
 import { Icon } from 'astro-icon/components'
 ---
 
-<footer class='z-10 mt-auto py-6' role='contentinfo'>
+<footer class='-z-10 mt-auto py-6' role='contentinfo'>
   <section>
     <div class='flex flex-col'>
       <nav aria-label='Breadcrumb' class='h-6'>
