--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import Image from '@/components/content/ContentImage.astro'
-import Heading from '@/components/Heading.astro'
+import ContentHeading from '@/components/ContentHeading.astro'
 import Link from '@/components/Link.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
 import Prose from '@/components/Prose.astro'
@@ -34,20 +34,19 @@ const { Content } = await render(post)
   isContentPage={true}>
   <PostStructuredData slot='structured-data' entry={post} type='blog' />
   <section>
-    <Heading
+    <ContentHeading
       title={post.data.title}
+      subtitle={post.data.subtitle || post.data.description}
       publishDate={post.data.publishDate}
       updatedDate={post.data.updatedDate}
       readingTime={readingTime(post.body || '')}
-      backUrl='/blog'
-      backLabel='Back'
-      isPost={true}
       links={post.data.links}
+      collection='blog'
     />
 
-    <article id='main-content' class='overflow-x-hidden'>
-      {
-        post.data.thumbnail && (
+    {
+      post.data.thumbnail && (
+        <div class='mb-10 mt-4'>
           <Image
             src={post.data.thumbnail}
             title={post.data.title}
@@ -57,8 +56,11 @@ const { Content } = await render(post)
             captionType={post.data.thumbnailCaptionType ?? 'alt'}
             loading='eager'
           />
-        )
-      }
+        </div>
+      )
+    }
+
+    <article id='main-content' class='overflow-x-hidden'>
       <Prose>
         <Content components={{ a: Link, img: Image }} />
       </Prose>
