--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,4 +1,5 @@
 ---
+import BrandFont from '@/components/fonts/BrandFont.astro'
 import InterFont from '@/components/fonts/InterFont.astro'
 import Footer from '@/components/Footer.astro'
 import Header from '@/components/Header.astro'
@@ -55,6 +56,7 @@ const titleTemplate = site.titleTemplate
     <!-- global meta -->
     <BaseHead />
     <InterFont />
+    {isContentPage && <BrandFont />}
     <FediverseMeta isContentPage={isContentPage} />
 
     <!-- page-specific fonts -->
