--- a/src/components/PeriodSelector.astro
+++ b/src/components/PeriodSelector.astro
@@ -13,7 +13,7 @@ const { period, periodMap, class: className = '', section } = Astro.props
   <div
     tabindex='0'
     role='button'
-    class='group flex cursor-pointer items-center gap-1.5 rounded-md px-2 py-1 text-theme-300 transition-all duration-200 hover:bg-theme-700/50 hover:text-theme-accent'>
+    class='group flex cursor-pointer items-center gap-1.5 rounded-md px-2 py-1 text-sm text-theme-300 transition-all duration-200 hover:bg-theme-700/50 hover:text-theme-accent'>
     <span class='font-normal'>{periodMap[period]}</span>
     <svg
       xmlns='http://www.w3.org/2000/svg'
